--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="./script.js"></script>
     <title>Funny clock</title>
   </head>
-  <body>
+  <body style="padding: 50px">
     <div
       class="digits transition"
       id="digits-h"
