Aligned items correctly; Added setTime function

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       class="digits transition"
       id="digits-h"
       style="
-        --circle-size: 400px;
-        transform: translate(50px, 50px);
+        --circle-size: 40ch;
+        transform: translate(5ch, 5ch);
         --offset: 270deg;
       "
     >
@@ -35,7 +35,7 @@
       class="digits transition"
       id="digits-min"
       style="
-        --circle-size: 500px;
+        --circle-size: 50ch;
 
         --offset: 270deg;
       "
