--- a/index.html
+++ b/index.html
@@ -60,5 +60,23 @@
         <div class="transition" id="minutes"></div>
       </div>
     </div>
+    <label for="hoursspeed" style="color: red">Hours:</label
+    ><input
+      type="range"
+      min="-30"
+      max="30"
+      value="0"
+      class="slider"
+      id="hoursspeed"
+    />
+    <label for="minutesspeed" style="color: red">Minutes:</label
+    ><input
+      type="range"
+      min="-30"
+      max="30"
+      value="0"
+      class="slider"
+      id="minutesspeed"
+    />
   </body>
 </html>
