Rewrote script to just sync every 10ms Added 24 hours layout

--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
           --offset: 270deg;
         "
       >
-        <div><span data-digit="0">0</span></div>
-        <div><span data-digit="1">1</span></div>
-        <div><span data-digit="2">2</span></div>
-        <div><span data-digit="3">3</span></div>
-        <div><span data-digit="4">4</span></div>
-        <div><span data-digit="5">5</span></div>
-        <div><span data-digit="6">6</span></div>
-        <div><span data-digit="7">7</span></div>
-        <div><span data-digit="8">8</span></div>
-        <div><span data-digit="9">9</span></div>
-        <div><span data-digit="10">10</span></div>
-        <div><span data-digit="11">11</span></div>
+        <div><span data-digit="0" class="d0 d12">0</span></div>
+        <div><span data-digit="1" class="d1 d13">1</span></div>
+        <div><span data-digit="2" class="d2 d14">2</span></div>
+        <div><span data-digit="3" class="d3 d15">3</span></div>
+        <div><span data-digit="4" class="d4 d16">4</span></div>
+        <div><span data-digit="5" class="d5 d17">5</span></div>
+        <div><span data-digit="6" class="d6 d18">6</span></div>
+        <div><span data-digit="7" class="d7 d19">7</span></div>
+        <div><span data-digit="8" class="d8 d20">8</span></div>
+        <div><span data-digit="9" class="d9 d21">9</span></div>
+        <div><span data-digit="10" class="d10 d22">10</span></div>
+        <div><span data-digit="11" class="d11 d23">11</span></div>
       </div>
       <div
         class="digits transition"
