Added enter and leave fullscreen mode

--- a/index.html
+++ b/index.html
@@ -92,5 +92,9 @@
       class="slider"
       id="minutesspeed"
     />
+    <img
+      src="assets/leave-fullscreen.svg"
+      onclick="document.webkitIsFullScreen ? document.exitFullscreen() : document.body.requestFullscreen()"
+    />
   </body>
 </html>
