--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
     <title>Funny clock</title>
   </head>
   <body>
-    <div
-      id="middle"
-      style="
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        margin: 0;
-        width: 0;
-        height: 0;
-      "
-    ></div>
     <div>
+      <div
+        id="middle"
+        style="
+          position: absolute;
+          left: calc(50% - 1ch);
+          top: calc(50% - 1ch);
+          margin: 0;
+          width: 0;
+          height: 0;
+        "
+      ></div>
       <div
         class="digits transition"
         id="digits-h"
