--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <link rel="stylesheet" href="./digits.css" />
     <link rel="stylesheet" href="./hands.css" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./options.css" />
     <script src="./script.js"></script>
     <script src="./alarm.js"></script>
     <title>Funny clock</title>
   </head>
   <body>
-    <div>
+    <div id="clock">
       <div
         id="middle"
         style="
@@ -74,27 +75,33 @@
         <div id="minutes"></div>
       </div>
     </div>
-    <label for="hoursspeed" style="color: red">Hours:</label
-    ><input
-      type="range"
-      min="-30"
-      max="30"
-      value="0"
-      class="slider"
-      id="hoursspeed"
-    />
-    <label for="minutesspeed" style="color: red">Minutes:</label
-    ><input
-      type="range"
-      min="-30"
-      max="30"
-      value="0"
-      class="slider"
-      id="minutesspeed"
-    />
-    <img
-      src="assets/leave-fullscreen.svg"
-      onclick="document.webkitIsFullScreen ? document.exitFullscreen() : document.body.requestFullscreen()"
-    />
+    <div id="options">
+      <label for="hoursspeed" style="color: red">Hours:</label
+      ><input
+        type="range"
+        min="-30"
+        max="30"
+        value="0"
+        class="slider"
+        id="hoursspeed"
+      />
+      <label for="minutesspeed" style="color: red">Minutes:</label
+      ><input
+        type="range"
+        min="-30"
+        max="30"
+        value="0"
+        class="slider"
+        id="minutesspeed"
+      />
+      <label for="alarmpm" style="color: red">Alarm PM:</label
+      ><input type="checkbox" id="alarmpm" />
+      <label for="alarmam" style="color: red">Alarm AM:</label
+      ><input type="checkbox" id="alarmam" />
+      <img
+        src="assets/leave-fullscreen.svg"
+        onclick="document.webkitIsFullScreen ? document.exitFullscreen() : document.body.requestFullscreen()"
+      />
+    </div>
   </body>
 </html>
