--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./options.css" />
     <script src="./script.js"></script>
     <script src="./alarm.js"></script>
-    <title>Funny clock</title>
+    <title>Moving Clock</title>
   </head>
   <body>
     <div id="clock">
