Fixed alarm not working Fixed alarmhourhand jumping between numbers Added Error message if alarm's not working

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Moving Clock</title>
   </head>
   <body>
-    <span>Error</span>
+    <span></span>
     <div id="clock">
       <div
         id="middle"
