Documented and optimized code

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="./hands.css" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./options.css" />
-    <script src="./scripts/alarm/Rotator.js"></script>
+    <script src="./scripts/alarm/Hand.js"></script>
     <script src="./scripts/alarm/Minutes.js"></script>
     <script src="./scripts/alarm/Hours.js"></script>
     <script src="./scripts/alarm/Alarm.js"></script>
-    <script src="./scripts/face/FaceRotator.js"></script>
+    <script src="./scripts/face/Rotator.js"></script>
     <script src="./scripts/face/Face.js"></script>
     <script src="./scripts/Hands.js"></script>
     <script src="./scripts/Main.js"></script>
