--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./digits.css" />
-    <link rel="stylesheet" href="./hands.css" />
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./options.css" />
+    <link rel="stylesheet" href="./styles/checkboxes.css" />
+    <link rel="stylesheet" href="./styles/digits.css" />
+    <link rel="stylesheet" href="./styles/hands.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/options/checkboxes.css" />
+    <link rel="stylesheet" href="./styles/options/checkmark.css" />
+    <link rel="stylesheet" href="./styles/options/menu.css" />
+    <link rel="stylesheet" href="./styles/options/slider.css" />
+    <link rel="stylesheet" href="./styles/options/symbols.css" />
     <script src="./scripts/alarm/Hand.js"></script>
     <script src="./scripts/alarm/Minutes.js"></script>
     <script src="./scripts/alarm/Hours.js"></script>
@@ -19,72 +24,198 @@
   </head>
   <body>
     <span></span>
-    <div id="clock">
-      <div
-        id="middle"
-        style="
-          position: absolute;
-          left: calc(50% - 1ch);
-          top: calc(50% - 1ch);
-          margin: 0;
-          width: 0;
-          height: 0;
-        "
-      ></div>
-      <div
-        class="digits transition"
-        id="digits-h"
-        style="
-          --circle-size: 40ch;
-          transform: translate(5ch, 5ch);
-          --offset: 270deg;
-        "
-      >
-        <div><span data-digit="0" class="d0 d12">0</span></div>
-        <div><span data-digit="1" class="d1 d13">1</span></div>
-        <div><span data-digit="2" class="d2 d14">2</span></div>
-        <div><span data-digit="3" class="d3 d15">3</span></div>
-        <div><span data-digit="4" class="d4 d16">4</span></div>
-        <div><span data-digit="5" class="d5 d17">5</span></div>
-        <div><span data-digit="6" class="d6 d18">6</span></div>
-        <div><span data-digit="7" class="d7 d19">7</span></div>
-        <div><span data-digit="8" class="d8 d20">8</span></div>
-        <div><span data-digit="9" class="d9 d21">9</span></div>
-        <div><span data-digit="10" class="d10 d22">10</span></div>
-        <div><span data-digit="11" class="d11 d23">11</span></div>
+    <form name="clock" id="clock">
+      <div id="middle"></div>
+      <fieldset class="digits" id="digits-h">
+        <legend>Hour</legend>
+        <div>
+          <input type="radio" id="h0" name="hour" value="0" /><label
+            for="h0"
+            class="d0 d12"
+            >0</label
+          >
+        </div>
+        <div>
+          <input type="radio" id="h1" name="hour" value="30" /><label
+            for="h1"
+            class="d1 d13"
+            >1</label
+          >
+        </div>
+        <div>
+          <input type="radio" id="h2" name="hour" value="60" /><label
+            for="h2"
+            class="d2 d14"
+            >2</label
+          >
+        </div>
+        <div>
+          <input type="radio" id="h3" name="hour" value="90" /><label
+            for="h3"
+            class="d3 d15"
+            >3</label
+          >
+        </div>
+        <div>
+          <input type="radio" id="h4" name="hour" value="120" /><label
+            for="h4"
+            class="d4 d16"
+            >4</label
+          >
+        </div>
+        <div>
+          <input type="radio" id="h5" name="hour" value="150" /><label
+            for="h5"
+            class="d5 d17"
+            >5</label
+          >
+        </div>
+        <div>
+          <input type="radio" id="h6" name="hour" value="180" /><label
+            for="h6"
+            class="d6 d18"
+            >6</label
+          >
+        </div>
+        <div>
+          <input type="radio" id="h7" name="hour" value="210" /><label
+            for="h7"
+            class="d7 d19"
+            >7</label
+          >
+        </div>
+        <div>
+          <input type="radio" id="h8" name="hour" value="240" /><label
+            for="h8"
+            class="d8 d20"
+            >8</label
+          >
+        </div>
+        <div>
+          <input type="radio" id="h9" name="hour" value="270" /><label
+            for="h9"
+            class="d9 d21"
+            >9</label
+          >
+        </div>
+        <div>
+          <input type="radio" id="h10" name="hour" value="300" /><label
+            for="h10"
+            class="d10 d22"
+            >10</label
+          >
+        </div>
+        <div>
+          <input type="radio" id="h11" name="hour" value="330" /><label
+            for="h11"
+            class="d11 d23"
+            >11</label
+          >
+        </div>
         <div id="target-h"></div>
-      </div>
-      <div
-        class="digits transition"
-        id="digits-min"
-        style="
-          --circle-size: 50ch;
-
-          --offset: 270deg;
-        "
-      >
-        <div><span data-digit="0">60</span></div>
-        <div><span data-digit="1">5</span></div>
-        <div><span data-digit="2">10</span></div>
-        <div><span data-digit="3">15</span></div>
-        <div><span data-digit="4">20</span></div>
-        <div><span data-digit="5">25</span></div>
-        <div><span data-digit="6">30</span></div>
-        <div><span data-digit="7">35</span></div>
-        <div><span data-digit="8">40</span></div>
-        <div><span data-digit="9">45</span></div>
-        <div><span data-digit="10">50</span></div>
-        <div><span data-digit="11">55</span></div>
+      </fieldset>
+      <fieldset class="digits" id="digits-min">
+        <legend>Minute</legend>
+        <div>
+          <input type="radio" id="min60" name="minute" value="0" /><label
+            for="min60"
+            >60</label
+          >
+        </div>
+        <div>
+          <input type="radio" id="min5" name="minute" value="30" /><label
+            for="min5"
+            >5</label
+          >
+        </div>
+        <div>
+          <input type="radio" id="min10" name="minute" value="60" /><label
+            for="min10"
+            >10</label
+          >
+        </div>
+        <div>
+          <input type="radio" id="min15" name="minute" value="90" /><label
+            for="min15"
+            >15</label
+          >
+        </div>
+        <div>
+          <input type="radio" id="min20" name="minute" value="120" /><label
+            for="min20"
+            >20</label
+          >
+        </div>
+        <div>
+          <input type="radio" id="min25" name="minute" value="150" /><label
+            for="min25"
+            >25</label
+          >
+        </div>
+        <div>
+          <input type="radio" id="min30" name="minute" value="180" /><label
+            for="min30"
+            >30</label
+          >
+        </div>
+        <div>
+          <input type="radio" id="min35" name="minute" value="210" /><label
+            for="min35"
+            >35</label
+          >
+        </div>
+        <div>
+          <input type="radio" id="min40" name="minute" value="240" /><label
+            for="min40"
+            >40</label
+          >
+        </div>
+        <div>
+          <input type="radio" id="min45" name="minute" value="270" /><label
+            for="min45"
+            >45</label
+          >
+        </div>
+        <div>
+          <input type="radio" id="min50" name="minute" value="300" /><label
+            for="min50"
+            >50</label
+          >
+        </div>
+        <div>
+          <input type="radio" id="min55" name="minute" value="330" /><label
+            for="min55"
+            >55</label
+          >
+        </div>
         <div id="target-min"></div>
-      </div>
+      </fieldset>
       <div id="hands">
         <div id="hours"></div>
         <div id="minutes"></div>
       </div>
-    </div>
+    </form>
     <div id="options">
-      <input type="checkbox" id="h-moving" checked /><label for="speed-slider-h"
-        >Hours</label
+      <input
+        type="checkbox"
+        id="eye"
+        class="symbol"
+        aria-label="Toggle settings"
+      />
+      <input
+        type="checkbox"
+        id="fullscreen"
+        class="symbol"
+        aria-label="Toggle fullscreen"
+        onclick="document.webkitIsFullScreen ? document.exitFullscreen() : document.body.requestFullscreen()"
+      />
+      <input
+        type="checkbox"
+        id="h-moving"
+        class="checkmark"
+        aria-label="Hours"
+        checked
+      /><label for="speed-slider-h">Hours</label
       ><input
         type="range"
         min="-30"
@@ -93,9 +224,13 @@
         class="slider"
         id="speed-slider-h"
       />
-      <input type="checkbox" id="min-moving" checked /><label
-        for="speed-slider-min"
-        >Minutes</label
+      <input
+        type="checkbox"
+        id="min-moving"
+        class="checkmark"
+        aria-label="Minutes"
+        checked
+      /><label for="speed-slider-min">Minutes</label
       ><input
         type="range"
         min="-30"
@@ -104,17 +239,14 @@
         class="slider"
         id="speed-slider-min"
       />
-      <input type="checkbox" id="alarmam" checked /><label for="alarmam"
+      <input type="checkbox" id="alarmam" class="checkmark" checked /><label
+        for="alarmam"
         >Alarm AM</label
       >
-      <input type="checkbox" id="alarmpm" checked /><label for="alarmpm"
+      <input type="checkbox" id="alarmpm" class="checkmark" checked /><label
+        for="alarmpm"
         >Alarm PM</label
       >
-      <input type="checkbox" id="eye" />
-      <img
-        src="assets/leave-fullscreen.svg"
-        onclick="document.webkitIsFullScreen ? document.exitFullscreen() : document.body.requestFullscreen()"
-      />
     </div>
   </body>
 </html>
