--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <span></span>
-    <form name="clock" id="clock">
+    <form name="clock">
       <div id="middle"></div>
       <div id="hands">
         <div id="hours"></div>
@@ -212,7 +212,7 @@
         type="checkbox"
         id="h-moving"
         class="checkmark symbol"
-        aria-label="Hours"
+        aria-label="Toggle rotation of hours"
         checked
       /><label for="speed-slider-h">Hours</label
       ><input
@@ -220,14 +220,14 @@
         min="-30"
         max="30"
         value="0"
-        class="slider"
         id="speed-slider-h"
+        aria-label="Speed of hours"
       />
       <input
         type="checkbox"
         id="min-moving"
         class="checkmark symbol"
-        aria-label="Minutes"
+        aria-label="Toggle rotation of minutes"
         checked
       /><label for="speed-slider-min">Minutes</label
       ><input
@@ -235,8 +235,8 @@
         min="-30"
         max="30"
         value="0"
-        class="slider"
         id="speed-slider-min"
+        aria-label="Speed of minutes"
       />
       <form name="timeline" id="timeline">
         <label for="AM0">S-AM</label>
@@ -244,127 +244,48 @@
           type="radio"
           name="edit"
           value="AM0"
-          class="edit"
           aria-label="Edit S-AM"
           checked
         />
         <input type="checkbox" id="AM0" class="toggle" />
         <label for="PM0">S-PM</label>
-        <input
-          type="radio"
-          name="edit"
-          value="PM0"
-          class="edit"
-          aria-label="Edit S-PM"
-        />
+        <input type="radio" name="edit" value="PM0" aria-label="Edit S-PM" />
         <input type="checkbox" id="PM0" class="toggle" aria-label="S-PM" />
         <label for="AM1">M-AM</label>
-        <input
-          type="radio"
-          name="edit"
-          value="AM1"
-          class="edit"
-          aria-label="Edit M-AM"
-        />
+        <input type="radio" name="edit" value="AM1" aria-label="Edit M-AM" />
         <input type="checkbox" id="AM1" class="toggle" />
         <label for="PM1">M-PM</label>
-        <input
-          type="radio"
-          name="edit"
-          value="PM1"
-          class="edit"
-          aria-label="Edit M-PM"
-        />
+        <input type="radio" name="edit" value="PM1" aria-label="Edit M-PM" />
         <input type="checkbox" id="PM1" class="toggle" />
         <label for="AM2">T-AM</label>
-        <input
-          type="radio"
-          name="edit"
-          value="AM2"
-          class="edit"
-          aria-label="Edit T-AM"
-        />
+        <input type="radio" name="edit" value="AM2" aria-label="Edit T-AM" />
         <input type="checkbox" id="AM2" class="toggle" />
         <label for="PM2">T-PM</label>
-        <input
-          type="radio"
-          name="edit"
-          value="PM2"
-          class="edit"
-          aria-label="Edit T-PM"
-        />
+        <input type="radio" name="edit" value="PM2" aria-label="Edit T-PM" />
         <input type="checkbox" id="PM2" class="toggle" />
         <label for="AM3">W-AM</label>
-        <input
-          type="radio"
-          name="edit"
-          value="AM3"
-          class="edit"
-          aria-label="Edit W-AM"
-        />
+        <input type="radio" name="edit" value="AM3" aria-label="Edit W-AM" />
         <input type="checkbox" id="AM3" class="toggle" />
         <label for="PM3">W-PM</label>
-        <input
-          type="radio"
-          name="edit"
-          value="PM3"
-          class="edit"
-          aria-label="Edit W-PM"
-        />
+        <input type="radio" name="edit" value="PM3" aria-label="Edit W-PM" />
         <input type="checkbox" id="PM3" class="toggle" />
         <label for="AM4">TH-AM</label>
-        <input
-          type="radio"
-          name="edit"
-          value="AM4"
-          class="edit"
-          aria-label="Edit TH-AM"
-        />
+        <input type="radio" name="edit" value="AM4" aria-label="Edit TH-AM" />
         <input type="checkbox" id="AM4" class="toggle" />
         <label for="PM4">TH-PM</label>
-        <input
-          type="radio"
-          name="edit"
-          value="PM4"
-          class="edit"
-          aria-label="Edit TH-PM"
-        />
+        <input type="radio" name="edit" value="PM4" aria-label="Edit TH-PM" />
         <input type="checkbox" id="PM4" class="toggle" />
         <label for="AM5">F-AM</label>
-        <input
-          type="radio"
-          name="edit"
-          value="AM5"
-          class="edit"
-          aria-label="Edit F-AM"
-        />
+        <input type="radio" name="edit" value="AM5" aria-label="Edit F-AM" />
         <input type="checkbox" id="AM5" class="toggle" />
         <label for="PM5">F-PM</label>
-        <input
-          type="radio"
-          name="edit"
-          value="PM5"
-          class="edit"
-          aria-label="Edit F-PM"
-        />
+        <input type="radio" name="edit" value="PM5" aria-label="Edit F-PM" />
         <input type="checkbox" id="PM5" class="toggle" />
         <label for="AM6">S-AM</label>
-        <input
-          type="radio"
-          name="edit"
-          value="AM6"
-          class="edit"
-          aria-label="Edit S-AM"
-        />
+        <input type="radio" name="edit" value="AM6" aria-label="Edit S-AM" />
         <input type="checkbox" id="AM6" class="toggle" />
         <label for="PM6">S-PM</label>
-        <input
-          type="radio"
-          name="edit"
-          value="PM6"
-          class="edit"
-          aria-label="Edit S-PM"
-        />
+        <input type="radio" name="edit" value="PM6" aria-label="Edit S-PM" />
         <input type="checkbox" id="PM6" class="toggle" />
       </form>
     </div>
