--- a/index.html
+++ b/index.html
@@ -32,164 +32,104 @@
       <fieldset id="digits-h">
         <legend>Hour</legend>
         <div>
-          <input type="radio" id="h0" name="hour" value="0" /><label
-            for="h0"
-            class="d0 d12"
-            >0</label
-          >
+          <input type="radio" id="h0" name="hour" value="0" />
+          <label for="h0" class="d0 d12">0</label>
         </div>
         <div>
-          <input type="radio" id="h1" name="hour" value="30" /><label
-            for="h1"
-            class="d1 d13"
-            >1</label
-          >
+          <input type="radio" id="h1" name="hour" value="30" />
+          <label for="h1" class="d1 d13">1</label>
         </div>
         <div>
-          <input type="radio" id="h2" name="hour" value="60" /><label
-            for="h2"
-            class="d2 d14"
-            >2</label
-          >
+          <input type="radio" id="h2" name="hour" value="60" />
+          <label for="h2" class="d2 d14">2</label>
         </div>
         <div>
-          <input type="radio" id="h3" name="hour" value="90" /><label
-            for="h3"
-            class="d3 d15"
-            >3</label
-          >
+          <input type="radio" id="h3" name="hour" value="90" />
+          <label for="h3" class="d3 d15">3</label>
         </div>
         <div>
-          <input type="radio" id="h4" name="hour" value="120" /><label
-            for="h4"
-            class="d4 d16"
-            >4</label
-          >
+          <input type="radio" id="h4" name="hour" value="120" />
+          <label for="h4" class="d4 d16">4</label>
         </div>
         <div>
-          <input type="radio" id="h5" name="hour" value="150" /><label
-            for="h5"
-            class="d5 d17"
-            >5</label
-          >
+          <input type="radio" id="h5" name="hour" value="150" />
+          <label for="h5" class="d5 d17">5</label>
         </div>
         <div>
-          <input type="radio" id="h6" name="hour" value="180" /><label
-            for="h6"
-            class="d6 d18"
-            >6</label
-          >
+          <input type="radio" id="h6" name="hour" value="180" />
+          <label for="h6" class="d6 d18">6</label>
         </div>
         <div>
-          <input type="radio" id="h7" name="hour" value="210" /><label
-            for="h7"
-            class="d7 d19"
-            >7</label
-          >
+          <input type="radio" id="h7" name="hour" value="210" />
+          <label for="h7" class="d7 d19">7</label>
         </div>
         <div>
-          <input type="radio" id="h8" name="hour" value="240" /><label
-            for="h8"
-            class="d8 d20"
-            >8</label
-          >
+          <input type="radio" id="h8" name="hour" value="240" />
+          <label for="h8" class="d8 d20">8</label>
         </div>
         <div>
-          <input type="radio" id="h9" name="hour" value="270" /><label
-            for="h9"
-            class="d9 d21"
-            >9</label
-          >
+          <input type="radio" id="h9" name="hour" value="270" />
+          <label for="h9" class="d9 d21">9</label>
         </div>
         <div>
-          <input type="radio" id="h10" name="hour" value="300" /><label
-            for="h10"
-            class="d10 d22"
-            >10</label
-          >
+          <input type="radio" id="h10" name="hour" value="300" />
+          <label for="h10" class="d10 d22">10</label>
         </div>
         <div>
-          <input type="radio" id="h11" name="hour" value="330" /><label
-            for="h11"
-            class="d11 d23"
-            >11</label
-          >
+          <input type="radio" id="h11" name="hour" value="330" />
+          <label for="h11" class="d11 d23">11</label>
         </div>
         <div id="target-h"></div>
       </fieldset>
       <fieldset id="digits-min">
         <legend>Minute</legend>
         <div>
-          <input type="radio" id="min60" name="minute" value="0" /><label
-            for="min60"
-            >60</label
-          >
+          <input type="radio" id="min60" name="minute" value="0" />
+          <label for="min60">60</label>
         </div>
         <div>
-          <input type="radio" id="min5" name="minute" value="30" /><label
-            for="min5"
-            >5</label
-          >
+          <input type="radio" id="min5" name="minute" value="30" />
+          <label for="min5">5</label>
         </div>
         <div>
-          <input type="radio" id="min10" name="minute" value="60" /><label
-            for="min10"
-            >10</label
-          >
+          <input type="radio" id="min10" name="minute" value="60" />
+          <label for="min10">10</label>
         </div>
         <div>
-          <input type="radio" id="min15" name="minute" value="90" /><label
-            for="min15"
-            >15</label
-          >
+          <input type="radio" id="min15" name="minute" value="90" />
+          <label for="min15">15</label>
         </div>
         <div>
-          <input type="radio" id="min20" name="minute" value="120" /><label
-            for="min20"
-            >20</label
-          >
+          <input type="radio" id="min20" name="minute" value="120" />
+          <label for="min20">20</label>
         </div>
         <div>
-          <input type="radio" id="min25" name="minute" value="150" /><label
-            for="min25"
-            >25</label
-          >
+          <input type="radio" id="min25" name="minute" value="150" />
+          <label for="min25">25</label>
         </div>
         <div>
-          <input type="radio" id="min30" name="minute" value="180" /><label
-            for="min30"
-            >30</label
-          >
+          <input type="radio" id="min30" name="minute" value="180" />
+          <label for="min30">30</label>
         </div>
         <div>
-          <input type="radio" id="min35" name="minute" value="210" /><label
-            for="min35"
-            >35</label
-          >
+          <input type="radio" id="min35" name="minute" value="210" />
+          <label for="min35">35</label>
         </div>
         <div>
-          <input type="radio" id="min40" name="minute" value="240" /><label
-            for="min40"
-            >40</label
-          >
+          <input type="radio" id="min40" name="minute" value="240" />
+          <label for="min40">40</label>
         </div>
         <div>
-          <input type="radio" id="min45" name="minute" value="270" /><label
-            for="min45"
-            >45</label
-          >
+          <input type="radio" id="min45" name="minute" value="270" />
+          <label for="min45">45</label>
         </div>
         <div>
-          <input type="radio" id="min50" name="minute" value="300" /><label
-            for="min50"
-            >50</label
-          >
+          <input type="radio" id="min50" name="minute" value="300" />
+          <label for="min50">50</label>
         </div>
         <div>
-          <input type="radio" id="min55" name="minute" value="330" /><label
-            for="min55"
-            >55</label
-          >
+          <input type="radio" id="min55" name="minute" value="330" />
+          <label for="min55">55</label>
         </div>
         <div id="target-min"></div>
       </fieldset>
@@ -214,8 +154,9 @@
         class="checkmark symbol"
         aria-label="Toggle rotation of hours"
         checked
-      /><label for="speed-slider-h">Hours</label
-      ><input
+      />
+      <label for="speed-slider-h">Hours</label>
+      <input
         type="range"
         min="-30"
         max="30"
@@ -229,8 +170,9 @@
         class="checkmark symbol"
         aria-label="Toggle rotation of minutes"
         checked
-      /><label for="speed-slider-min">Minutes</label
-      ><input
+      />
+      <label for="speed-slider-min">Minutes</label>
+      <input
         type="range"
         min="-30"
         max="30"
