Added edit button for timeline Changed way alarm is activated

--- a/index.html
+++ b/index.html
@@ -182,6 +182,12 @@
       </fieldset>
     </form>
     <form name="timeline" id="timeline">
+      <input
+        type="checkbox"
+        id="edit"
+        class="symbol"
+        aria-label="Toggle editing mode"
+      />
       <label for="AM0">S-AM</label>
       <input
         type="radio"
