--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="./scripts/face/Face.js"></script>
     <script src="./scripts/Hands.js"></script>
     <script src="./scripts/Cursor.js"></script>
+    <script src="./scripts/Storage.js"></script>
     <script src="./scripts/Main.js"></script>
     <title>Moving Clock</title>
   </head>
